--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ body::-webkit-scrollbar-thumb {
 	max-width: 50%;
 	padding: 0 4px;
 	border-radius: 10px;
+	vertical-align: middle;
 }
 
 .column img {
